# node-agent

./: Cargo.toml  README.md  config.dev.toml  config.example.toml  install.sh  mise.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
benches/: heartbeat_serialization.rs  message_parsing.rs
docs/: ARCHITECTURE.md
src/: agent.rs  cache.rs  config.rs  docker.rs  executor.rs  main.rs  messages.rs  nats.rs  state.rs  wasm.rs
src/metrics/: container.rs  gpu.rs  mod.rs
src/oci/: mod.rs
src/security/: mod.rs  registry.rs  seccomp.rs  signing.rs  tls.rs
src/update/: download.rs  mod.rs  restart.rs  verify.rs
