[package]
name = "archipelag-agent"
version = "0.1.0"
edition = "2021"
description = "Node agent for archipelag.io distributed compute network"
authors = ["archipelag.io <hello@archipelag.io>"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Docker client
bollard = "0.18"

# WASM runtime
wasmtime = "27"
wasmtime-wasi = "27"

# NATS client
async-nats = "0.38"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Cryptographic hashing for verification
sha2 = "0.10"
hex = "0.4"

# Ed25519 signature verification for updates
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Version comparison
semver = "1"

# UUID for host/job IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Futures utilities
futures-util = "0.3"

# Concurrent data structures
dashmap = "6"

# Random number generation
rand = "0.8"

# System info
num_cpus = "1.16"
sysinfo = "0.32"
reqwest = { version = "0.13.1", features = ["stream", "json"] }
dirs = "6.0.0"

# GPU detection (NVIDIA)
# nvml-wrapper = "0.9"  # Uncomment when needed

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "message_parsing"
harness = false

[[bench]]
name = "heartbeat_serialization"
harness = false

[profile.release]
lto = true
strip = true
